Fix overflow bug for sidenav

--- a/app/assets/stylesheets/components/sidenav.scss
+++ b/app/assets/stylesheets/components/sidenav.scss
@@ -11,7 +11,6 @@ $index-gray: #cac4c9;
   min-width: 220px;
   height: 100vh;
   overflow: scroll;
-  padding-top: 10px;
 
   background-color: $index-purple;
   color: $index-gray;
